# wikiextractor

./: .gitignore  README.md  pyproject.toml
tests/: test_split_version.py  test_utils.py
wikiextractor/: WikiExtractor.py  WikiHistoryExtractor.py  convertDictionary.py  convertPage.py  createDataset.py  extract.py  extract_history.py  getNamespace.py  pageHistory.py  splitRevision.py
