[project]
name = "wikiextractor"
version = "3.0.7"
description = "wikiextractor"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beautifulsoup4>=4.13.4",
    "py7zr>=1.0.0",
]

[project.scripts]
wikiextractor = "wikiextractor.WikiExtractor:main"
extractPage = "wikiextractor.extractPage:main"
splitRevision = "wikiextractor.splitRevision:main"
convertDictionary = "wikiextractor.convertDictionary:main"
pageHistory = "wikiextractor.pageHistory:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mypy>=1.16.0",
    "pytest>=8.4.0",
]
